idf_component_register(
    SRCS
        "test_beep_manager.c"
        "../../../components/audio_processor/beep_manager.c"
    INCLUDE_DIRS
        "."
        "../../../components/audio_processor/include"
    PRIV_REQUIRES
        unity
        driver
        esp_timer
        freertos
        util_safe
)
